# PORTO

./: .dockerignore  .env.docker  .gitignore  Dockerfile  docker-compose.yaml  frontend.py  locustfile.py  main.py  pyproject.toml
database/: create_db.py  crud.py  database.py  model.py
database/crud/: conversation.py  document.py  messages.py
database/model/: conversation.py  document.py  document_image.py  message.py
evaluation/: eval.py  router_eval.py  router_testset.jsonl  test.py  tests.jsonl
evaluation/answear_quality_test/: answear_evaluator.py  answear_loader.py  answear_testset.jsonl  evaluator.py
evaluation/load_test/: RAG_conversation.json  conversations.json  locustfile_multiturn.py  locustfile_single.py  translate.json
evaluation/router_test/: router_eval.py  router_testset.jsonl
routes/: chat.py  conversation.py  document.py  retrieval.py
schemas/: chat.py  conversation.py  document.py  message.py  retrieval.py
services/: chat.py  conversation.py  doc_retrieval.py  document.py  history.py  ingest.py  message.py  retrieval.py  retriveal.py  router.py
tools/: delete_images.py  docx_parser.py
